Increase `BASE_MAX_ITEMS` in `Bucket` from 5,000 to 50,000 to prevent history truncation. Refactor `append()` to return evicted count and improve logging efficiency.